--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <script>
         AOS.init();
     </script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
